...
"action-sort" = "Sort";
"action-thank-user-accessibility" = "Thank User";
"action-undo" = "Undo";
"action-unsave" = "Unsave";
"action-unsaved-accessibility-notification" = "Article unsaved";
...
"back-button-popover-title" = "Tap to go back";
"button-go-back" = "Go back";
"button-next" = "Next";
"button-ok" = "OK";
"button-publish" = "Publish";
...
"explore-detail-back-button-title" = "Back to Explore feed";
"explore-enable-location-title" = "Explore articles near your current location";
"explore-featured-article-heading" = "Featured article";
"explore-featured-article-sub-heading-from-language-wikipedia" = "From $1 Wikipedia";
"explore-featured-article-sub-heading-from-wikipedia" = "From Wikipedia";
...
"explore-feed-preferences-global-cards-subtitle" = "Not language specific";
"explore-feed-preferences-global-cards-title" = "Global cards";
"explore-feed-preferences-hide-card-action-title" = "Hide this card";
"explore-feed-preferences-hide-feed-cards-action-title" = "Hide all “$1” cards";
"explore-feed-preferences-in-the-news-description" = "Articles about current events";
...
"explore-feed-preferences-turn-on-explore-tab-message" = "This will replace the Settings tab with the Explore tab, you can access Settings from the top of the Explore tab by tapping on the gear icon";
"explore-feed-preferences-turn-on-explore-tab-title" = "Turn on the Explore tab?";
"explore-games-title" = "Games";
"explore-hide-card-prompt" = "Hide this card";
"explore-main-page-description" = "Main page of Wikimedia projects";
...
"games-email-report-body-encountered" = "I have encountered a problem with the Wikipedia games feature:";
"games-email-report-subject" = "Issue Report - Wikipedia games";
"games-wcf-button-play-title" = "Play today's game";
"games-wcf-explore-button-review-title" = "Review results";
"games-wcf-explore-complete-subtitle" = "You scored $1/$2 on today's game. Next game in $3";
"games-wcf-explore-in-progress-subtitle" = "You're on question $1. Continue guessing which event came first on this day in history.";
"games-wcf-explore-title" = "Which came first?";
"gan-variants-alert-body" = "The Wikipedia app now supports the following Gan variants as primary or secondary languages within the app, making it easier to read, search and edit in your preferred variants:\n\n贛語 原文 Gan (gan)\n赣语 简体 Gan, Simplified (gan-hans)\n贛語 繁體 Gan, Traditional (gan-hant)";
"gan-variants-alert-title" = "Updates to Gan variant support";
...
"image-rec-survey-option-5" = "I don’t know this subject";
"image-rec-survey-option-6" = "Other";
"image-rec-survey-submit-button" = "Submit";
"image-rec-survey-title" = "Reason";
"image-rec-title" = "Add image";
...
"welcome-privacy-terms-button-text" = "Learn more about our privacy policy and terms of use";
"which-came-first-article-card-open-hint" = "Opens event related to this article ";
"which-came-first-articles-section-title" = "Articles from today's game";
"which-came-first-average-score-label" = "average score";
"which-came-first-best-streak-label" = "best streak";
...
"which-came-first-correct-feedback2" = "+1 point";
"which-came-first-current-streak-label" = "current streak";
"which-came-first-error-title" = "Something went wrong";
"which-came-first-footer-a11y" = "Question $1 of $2";
"which-came-first-game-complete-title" = "Game Complete!";
...
"which-came-first-retry-button" = "Retry";
"which-came-first-score" = "You scored $1/$2.";
"which-came-first-see-results-button" = "See Results";
"which-came-first-share-activity-text" = "I'm playing \"Which came first?\" a daily trivia game on the Wikipedia iOS app https://apps.apple.com/app/apple-store/id324715238?pt=208305&ct=wiki_game_202605&mt=8";
"which-came-first-share-score-button" = "Share score";
"which-came-first-share-score-summary" = "I scored $1/$2 on \"Which came first?\" today.";
"which-came-first-share-topics-title" = "Topics included:";
"which-came-first-splash-about-button" = "About this game";
"which-came-first-splash-continue-button" = "Continue today's game";
"which-came-first-splash-review-button" = "Review results";
...
